fix: adjust dark mode preview text color
This means Storybook previews now use the correct text color value,
instead of #fff

The renamed CSS variable can also be correctly accessed from components

--- a/src/scss/storybook_dark_mode.scss
+++ b/src/scss/storybook_dark_mode.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 // conditional overrides for dark mode for use in storybook.
 // Because we only use application.css from gitlab (and not
 // application_dark), we need to override some base rules so
@@ -9,7 +11,7 @@
 
 .gl-dark {
   --color-body-bg: #1f1f1f;
-  --color-body-text: #fff;
+  --gl-text-color: #{$gray-50}; // text color is usually $gray-900, but in dark mode $gray-900 variable gets inverted to $gray-50
 
   color-scheme: dark;
 
@@ -18,6 +20,6 @@
     // We can delete these once $body-bg and $body-color
     // variables in variables.scss are updated to use CSS custom properties
     background-color: var(--color-body-bg);
-    color: var(--color-body-text);
+    color: var(--gl-text-color);
   }
 }
